charts/helm-charts/config/nginx-ingress-devops.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: devops
  name: nginx-ingress-controller
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - secretName: tls-secret
  rules:
  - host: jenkinks.questcode.org
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins-master-node
          servicePort: 8080
