charts/helm-charts/config/nginx-ingress-staging.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: staging
  name: nginx-ingress-controller
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - secretName: tls-secret
  rules:
  - host: staging.questcode.org
    http:
      paths:
      - path: /
        backend:
          serviceName: questcode-frontend-staging
          servicePort: 80

  - host: staging.questcode.org
    http:
      paths:
      - path: /api
        backend:
          serviceName: questcode-backend-user-staging
          servicePort: 3020
        
  - host: staging.questcode.org
    http:
      paths:
      - path: /api/scm
        backend:
          serviceName: questcode-backend-scm-staging
          servicePort: 3030
